--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,13 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc.jar=lib/sqlite-jdbc.jar
+file.reference.snakeyaml-1.13.jar=lib/snakeyaml-1.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${file.reference.sqlite-jdbc.jar}
+    ${file.reference.snakeyaml-1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,6 +55,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.snakeyaml-1.13.jar=javadox.com/org.yaml/snakeyaml/1.13/org/yaml/snakeyaml/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -65,7 +66,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=de.bass.projektBlack.main.Main
+main.class=de.bass.projektBlack.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
